k8s/gatekeeper/block-root-containers-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: blockrootcontainers
spec:
  crd:
    spec:
      names:
        kind: BlockRootContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package blockrootcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not _has_runAsNonRoot(container)
          msg := sprintf("Container '%v' must set securityContext.runAsNonRoot=true", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not _has_runAsNonRoot(container)
          msg := sprintf("Init container '%v' must set securityContext.runAsNonRoot=true", [container.name])
        }

        _has_runAsNonRoot(container) {
          container.securityContext.runAsNonRoot == true
        }
